// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`conventional-changelog-beemo > doesnt replace @username if wrapped in backticks 1`] = `
"## 1.0.0 (2024-05-08)

* deps: Updated \\ packages. ([48854c7](https://github.com/beemojs/conventional-changelog-beemo/commit/48854c7))"
`;

exports[`conventional-changelog-beemo > handles merge commits 1`] = `
"## 1.0.0 (2024-05-08)

* Merge pull request #29 from owner/repo ([5250ecb](https://github.com/beemojs/conventional-changelog-beemo/commit/5250ecb)), closes [#29](https://github.com/beemojs/conventional-changelog-beemo/issues/29)
* fix: use yarn ([f38a965](https://github.com/beemojs/conventional-changelog-beemo/commit/f38a965))"
`;

exports[`conventional-changelog-beemo > handles multiple notes 1`] = `
"## 1.0.0 (2024-05-08)

* fix(button): Made button changes ([1f3c84c](https://github.com/beemojs/conventional-changelog-beemo/commit/1f3c84c))
* release: Initial release ([bae1c06](https://github.com/beemojs/conventional-changelog-beemo/commit/bae1c06))"
`;

exports[`conventional-changelog-beemo > handles revert type 1`] = `
"## 1.0.0 (2024-05-08)

* Revert this is the PR title ([d6f662d](https://github.com/beemojs/conventional-changelog-beemo/commit/d6f662d))
* revert(foo): undo this ([884912a](https://github.com/beemojs/conventional-changelog-beemo/commit/884912a))"
`;

exports[`conventional-changelog-beemo > links commits/issues to deep repositories correctly 1`] = `
"## 1.0.0 (2024-05-08)

* update: supports sub-package links ([31fed38](https://github.com/beemojs/conventional-changelog-beemo/commit/31fed38)), closes [#10](https://github.com/beemojs/conventional-changelog-beemo/issues/10)"
`;

exports[`conventional-changelog-beemo > only replaces with link to user if it is an username 1`] = `
"## 1.0.0 (2024-05-08)

* build(deps): bump @dummy/package from 7.1.2 to 8.0.0 ([6c46583](https://github.com/beemojs/conventional-changelog-beemo/commit/6c46583))
* fix: use npm@5 (@username) ([608d4ac](https://github.com/beemojs/conventional-changelog-beemo/commit/608d4ac))"
`;

exports[`conventional-changelog-beemo > replaces #[0-9]+ with issue URL 1`] = `
"## 1.0.0 (2024-05-08)

* new(awesome): fix #88 ([029d4d2](https://github.com/beemojs/conventional-changelog-beemo/commit/029d4d2)), closes [#88](https://github.com/beemojs/conventional-changelog-beemo/issues/88)"
`;

exports[`conventional-changelog-beemo > replaces @username with GitHub user URL 1`] = `
"## 1.0.0 (2024-05-08)

* feature(awesome): issue brought up by @bcoe! on Friday ([b80bbae](https://github.com/beemojs/conventional-changelog-beemo/commit/b80bbae))"
`;

exports[`conventional-changelog-beemo > supports all types at once 1`] = `
"## 1.0.0 (2024-05-08)

* perf: Speeeeed ([578ef37](https://github.com/beemojs/conventional-changelog-beemo/commit/578ef37))
* types: Removed any ([98a5b32](https://github.com/beemojs/conventional-changelog-beemo/commit/98a5b32))
* patch(router): Fix params ([23d24a5](https://github.com/beemojs/conventional-changelog-beemo/commit/23d24a5))
* deps(babel,jest): Bumped to latest ([9c5a63a](https://github.com/beemojs/conventional-changelog-beemo/commit/9c5a63a))
* Random commit with no type ([8cfe89e](https://github.com/beemojs/conventional-changelog-beemo/commit/8cfe89e))
* Revert PR #1 ([bd556e5](https://github.com/beemojs/conventional-changelog-beemo/commit/bd556e5)), closes [#1](https://github.com/beemojs/conventional-changelog-beemo/issues/1)
* update(modal, button): added accessibility ([afff546](https://github.com/beemojs/conventional-changelog-beemo/commit/afff546)), closes [#1](https://github.com/beemojs/conventional-changelog-beemo/issues/1) [#2](https://github.com/beemojs/conventional-changelog-beemo/issues/2)
* internal(ts): updated types ([dcd1f00](https://github.com/beemojs/conventional-changelog-beemo/commit/dcd1f00))
* test: setup testing framework ([758f4fa](https://github.com/beemojs/conventional-changelog-beemo/commit/758f4fa))
* build(deps): updated dev tools ([3679834](https://github.com/beemojs/conventional-changelog-beemo/commit/3679834))
* ci(travis): fixed yaml config ([1efa186](https://github.com/beemojs/conventional-changelog-beemo/commit/1efa186))
* security(auth): improved logic ([1f1dd95](https://github.com/beemojs/conventional-changelog-beemo/commit/1f1dd95)), closes [#3](https://github.com/beemojs/conventional-changelog-beemo/issues/3)
* style(button): polished rounded corners ([97efdbc](https://github.com/beemojs/conventional-changelog-beemo/commit/97efdbc))
* docs: added getting started ([aaa4480](https://github.com/beemojs/conventional-changelog-beemo/commit/aaa4480))
* feature(core): settings refactor ([a7d9f6b](https://github.com/beemojs/conventional-changelog-beemo/commit/a7d9f6b))
* fix: updated i18n ([5cba2e8](https://github.com/beemojs/conventional-changelog-beemo/commit/5cba2e8))
* new: amazing new module ([6c1a592](https://github.com/beemojs/conventional-changelog-beemo/commit/6c1a592))
* break: Forms have changed ([d669e1b](https://github.com/beemojs/conventional-changelog-beemo/commit/d669e1b))
* release: New major! ([8c49b13](https://github.com/beemojs/conventional-changelog-beemo/commit/8c49b13))"
`;

exports[`conventional-changelog-beemo > supports non public GitHub repository locations 1`] = `
"## 3.0.0 (2024-05-08)

* new: why this work? ([6087d38](https://github.internal.example.com/conventional-changelog/internal/commit/6087d38))
* update(events): implementing #5 by @dlmr ([6c602a9](https://github.internal.example.com/conventional-changelog/internal/commit/6c602a9)), closes [#5](https://github.internal.example.com/conventional-changelog/internal/issues/5) [#10](https://github.internal.example.com/conventional-changelog/internal/issues/10)"
`;

exports[`conventional-changelog-beemo > uses h1 for major versions 1`] = `
"## 1.0.0 (2024-05-08)

* fix: just a patch ([cc6d48a](https://github.com/beemojs/conventional-changelog-beemo/commit/cc6d48a))
* release: new stuff ([9bcd1d8](https://github.com/beemojs/conventional-changelog-beemo/commit/9bcd1d8))
* break: new shit ([173722f](https://github.com/beemojs/conventional-changelog-beemo/commit/173722f))"
`;

exports[`conventional-changelog-beemo > uses h2 for minor versions 1`] = `
"## 1.0.0 (2024-05-08)

* fix: just a patch ([ef07da3](https://github.com/beemojs/conventional-changelog-beemo/commit/ef07da3))
* feature(modal): better modals ([d78c349](https://github.com/beemojs/conventional-changelog-beemo/commit/d78c349))
* update: new stuff ([9fc6fa9](https://github.com/beemojs/conventional-changelog-beemo/commit/9fc6fa9))
* new: new shit ([6cf43fa](https://github.com/beemojs/conventional-changelog-beemo/commit/6cf43fa))"
`;

exports[`conventional-changelog-beemo > uses h3 for patch versions 1`] = `
"## 1.0.0 (2024-05-08)

* patch: just a patch ([4abcd53](https://github.com/beemojs/conventional-changelog-beemo/commit/4abcd53))
* docs: add a manual ([134bad3](https://github.com/beemojs/conventional-changelog-beemo/commit/134bad3))"
`;

exports[`conventional-changelog-beemo > works if there is no semver tag 1`] = `
"## 1.0.0 (2024-05-08)

* perf: Speeeeed ([6da20f6](https://github.com/beemojs/conventional-changelog-beemo/commit/6da20f6))
* tests: Added before hooks ([227479a](https://github.com/beemojs/conventional-changelog-beemo/commit/227479a))
* type: Added unknown ([fdb2076](https://github.com/beemojs/conventional-changelog-beemo/commit/fdb2076))
* fix(*): oops ([878f533](https://github.com/beemojs/conventional-changelog-beemo/commit/878f533))
* fix(compile): avoid a bug ([6fb3737](https://github.com/beemojs/conventional-changelog-beemo/commit/6fb3737))
* revert(ngOptions): bad commit ([e077c22](https://github.com/beemojs/conventional-changelog-beemo/commit/e077c22))
* update(ngOptions): make it faster ([89bca64](https://github.com/beemojs/conventional-changelog-beemo/commit/89bca64)), closes [#1](https://github.com/beemojs/conventional-changelog-beemo/issues/1) [#2](https://github.com/beemojs/conventional-changelog-beemo/issues/2)
* new: amazing new module ([51a92ca](https://github.com/beemojs/conventional-changelog-beemo/commit/51a92ca))
* ci(travis): add TravisCI pipeline ([63f9639](https://github.com/beemojs/conventional-changelog-beemo/commit/63f9639))
* build: first build setup ([ce71419](https://github.com/beemojs/conventional-changelog-beemo/commit/ce71419))"
`;

exports[`conventional-changelog-beemo > works with unknown host 1`] = `
"## 1.0.0 (2024-05-08)

* docs: add manual ([2d98bf9](https://example.com/commits/2d98bf9))"
`;
